--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -241,6 +241,9 @@ div.dialog-content {
 .cast {
   overflow-x: auto;
   overflow-y: hidden;
+  margin-left: -15px;
+  margin-right: -15px;
+  width: calc(100% + 2 * 15px);
 
   &-member {
     min-width: 76px;
@@ -250,12 +253,16 @@ div.dialog-content {
     align-items: center;
     text-align: center;
     padding: 0 6px;
+    overflow: hidden;
+    max-height: 140px;
   }
 
   &-profile-picture {
+    min-height: 50px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin-bottom: 5px;
 
     background-repeat: no-repeat;
     background-position: center center;
@@ -264,12 +271,17 @@ div.dialog-content {
   }
 
   .name {
-    font-size: 0.9em;
+    font-size: 0.75em;
   }
 
   .character {
-    font-size: 0.9em;
+    font-size: 0.75em;
     font-style: italic;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 }
 
