Improve available select. Improve loading behavior with skeleton templates. Improve performance by new pipes. Fix issues with Add Movie view. Introduce recommended film adding.

--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -56,7 +56,7 @@
       <input
         type="text"
         matInput
-        placeholder="🎬 Search for movie"
+        placeholder="🎬 Search for a movie"
         aria-label="Movie"
         [formControl]="movieControl"
         [matAutocomplete]="auto"
