--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -7,11 +7,8 @@
         </div>
       </div>
 
-      <!-- <div
-      *ngIf="movie.backdropUrl"
-      class="backdrop"
-      [ngStyle]="{'background-image': 'url(' + movie.backdropUrl + ')'}"
-    > -->
+      <!-- <div class="loading-image backdrop" *ngIf="!backgroundLoaded"></div> -->
+
       <ng-container *ngIf="{ val: selectedBackdrop$ | async }; let current">
         <div
           class="backdrop"
@@ -27,7 +24,7 @@
           >
             <div
               *ngFor="let b of movie.originalObject.images.backdrops.slice(0, maxBgCount); let i = index"
-              (click)="selectedBackdrop$.next(i)"
+              (click)="selectedBackdrop$.next(i); backgroundLoaded = false"
               class="bd-selector"
               [class.bd-selected]="i === current.val"
             ></div>
@@ -49,10 +46,10 @@
       </h1>
       <div class="subtitle">
         <div class="extra-info">
-          <span class="director">{{ getDirector(movie) }}</span>
+          <span class="director">{{ movie | credit:'directors' }}</span>
           <span class="separator">|</span>
           <span class="country-of-origin"
-            >{{ getProductionsCountries(movie) }}
+            >{{ movie | productionCountry }}
           </span>
         </div>
         <div class="basics">
@@ -73,7 +70,13 @@
                 + 'https://image.tmdb.org/t/p/w500' + movie.originalObject.poster_path + ' 1000w,'
                 + 'https://image.tmdb.org/t/p/w780' + movie.originalObject.poster_path + ' 1400w'"
             [useSrcset]="true"
+            (onStateChange)="onStateChangeLoadPoster($event)"
           />
+          <div
+            class="loading-image poster"
+            *ngIf="(posterLoade$ | async) === false"
+          ></div>
+
           <movie-score
             class="cursor-pointer"
             (click)="openTmdb(movie.id)"
@@ -123,7 +126,7 @@
               <div
                 *ngIf="movie.metaRating"
                 class="movie-rating meta-critic"
-                [ngClass]="getMetaBgColor(movie.metaRating)"
+                [ngClass]="movie.metaRating | metaColor"
                 matTooltip="Metacritic score"
               >
                 <span class="score"
@@ -139,22 +142,14 @@
               </div>
             </div>
             <ng-container *ngIf="movie.credits">
-              <!-- <div>
-              <span class="role">Director: </span>
-              <span class="names">{{ getDirector(movie) }}</span>
-            </div> -->
-              <!-- <div>
-              <span class="role">Writer: </span>
-              <span class="names" [innerHTML]="getWriter(movie)"></span>
-            </div> -->
               <div class="crew">
                 <div class="crew-member">
-                  <div class="name">{{ getDirector(movie) }}</div>
+                  <div class="name">{{ movies | credit: 'directors' }}</div>
                   <div class="job">Director</div>
                 </div>
                 <div
                   class="crew-member"
-                  *ngFor="let member of getWriter(movie)"
+                  *ngFor="let member of movie | credit: 'writers':'with-job'"
                 >
                   <div class="name">{{ member.name }}</div>
                   <div class="job">{{ member.job }}</div>
@@ -249,14 +244,18 @@
                 ><h2 #available>📺 Available</h2></mat-panel-title
               >
             </mat-expansion-panel-header>
-            <select [(ngModel)]="selectedWatchProviderCountry">
-              <option
-                *ngFor="let country of getWatchProviderCountries(watchProviders)"
-                [value]="country"
-              >
-                {{ country | uppercase }}
-              </option>
-            </select>
+            <mat-form-field class="watch-country">
+              <!-- <mat-label>Sort</mat-label> -->
+              <mat-select [(ngModel)]="selectedWatchProviderCountry">
+                <mat-option
+                  *ngFor="let country of getWatchProviderCountries(watchProviders)"
+                  [value]="country"
+                >
+                  {{ country | countryFlagName }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+
             <ng-container
               *ngIf="watchProviders.results[selectedWatchProviderCountry]?.flatrate; let flatrate"
             >
@@ -300,8 +299,8 @@
               *ngIf="!watchProviders.results[selectedWatchProviderCountry]"
             >
               <div class="not-available">
-                Not available for stream in '{{selectedWatchProviderCountry}}'.
-                Maybe 📀?
+                Not available for stream in {{selectedWatchProviderCountry |
+                countryFlagName}}. Maybe 📀?
               </div>
             </ng-container>
             <div class="justwatch-credit">
@@ -309,7 +308,7 @@
             </div>
           </mat-expansion-panel>
         </ng-container>
-        <mat-expansion-panel>
+        <mat-expansion-panel *ngIf="movie.recommendations?.results.length">
           <mat-expansion-panel-header>
             <mat-panel-title
               ><h2>🍿 You might also like these</h2></mat-panel-title
@@ -331,6 +330,7 @@
                 + 'https://image.tmdb.org/t/p/w500' + recommendation.poster_path + ' 800w,'
                 + 'https://image.tmdb.org/t/p/w780' + recommendation.poster_path + ' 1100w'"
                 [useSrcset]="true"
+                [offset]="100"
               />
               <movie-score
                 class="cursor-pointer"
