--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -76,10 +76,18 @@ div.dialog-content {
     z-index: 1;
 
     transition: opacity 0.7s;
-    opacity: 0;
+    opacity: 0.8;
+
+    &.loading-image {
+      height: $posterHeight;
+    }
 
     &.ng-lazyloaded {
       opacity: 1;
+    }
+
+    &:not(.ng-lazyloaded):not(.loading-image) {
+      height: 0;
     }
   }
 }
@@ -91,7 +99,7 @@ div.dialog-content {
   padding-bottom: 20px;
   background-color: black;
   transition: opacity 1s;
-  opacity: 0;
+  opacity: 0.8;
 
   &.ng-lazyloaded {
     opacity: 1;
@@ -420,6 +428,7 @@ $poster-base-unit: min(95vw, 472px);
 
 .recommendation {
   position: relative;
+  height: calc((#{$poster-base-unit} / 3 - 15px) * 3 / 2);
 
   movie-score {
     position: absolute;
@@ -594,4 +603,32 @@ mat-expansion-panel.mat-expansion-panel {
   color: white;
   text-shadow: 0px 0px 6px #0000009c;
   z-index: 1;
+}
+
+.watch-country {
+  // margin-left: auto;
+  // transform: scale(0.75);
+  margin-left: -5px;
+
+  &::ng-deep {
+    .mat-mdc-form-field-focus-overlay {
+      opacity: 0 !important;
+    }
+
+    .mat-mdc-text-field-wrapper {
+      background-color: unset; //#f5f0ff;
+      height: 43px;
+      border-radius: 6px;
+    }
+
+    .mat-mdc-form-field-infix {
+      padding-top: 16px;
+      padding-bottom: 11px;
+      min-height: 43px;
+    }
+
+    .mdc-floating-label.mat-mdc-floating-label {
+      top: 23px;
+    }
+  }
 }
