--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -1,6 +1,16 @@
 $posterWidth: min(27vw, 154px);
 $posterHeight: calc(3 / 2 * $posterWidth);
 
+.loading {
+  width: 100%;
+
+  mat-card {
+    margin-left: 19px;
+    margin-right: 0;
+    flex: 1;
+  }
+}
+
 :host {
   display: flex;
   justify-content: space-between;
@@ -23,12 +33,6 @@ $posterHeight: calc(3 / 2 * $posterWidth);
   }
 
   .option-card {
-    // background-image: linear-gradient(
-    //   -225deg,
-    //   #69eacb29 0%,
-    //   #eaccf83d 48%,
-    //   #6654f114 100%
-    // );
     background-color: #fbf9ff;
     min-height: calc(1 * $posterHeight);
     width: 100%;
@@ -68,8 +72,21 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     margin-bottom: 19px;
     border-radius: 5px;
 
-    &-placeholder {
-      height: $posterHeight;
+    &.loading-image {
+      height: calc(#{$posterHeight} + 5px);
+      margin-top: -24px;
+      margin-bottom: 24px;
+    }
+
+    &:not(.ng-lazyloaded):not(.loading-image) {
+      height: 0;
+    }
+
+    transition: opacity 0.7s;
+    opacity: 0.75;
+
+    &.ng-lazyloaded {
+      opacity: 1;
     }
   }
 
@@ -592,37 +609,6 @@ $donut-font-weight: 700;
   right: 3px;
 }
 
-// Chart base
-.donut-chart {
-  position: relative;
-  border-radius: 50%;
-
-  &:before,
-  &:after {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  &:before {
-    border-radius: 50%;
-    background: $donut-center-color;
-    content: "";
-  }
-
-  &:after {
-    font: {
-      weight: $donut-font-weight;
-    }
-    z-index: 1;
-  }
-}
-
 .director {
   font-family: "Product Sans Bold";
-}
-
-:root {
-  --var: 31;
 }
