--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -11,14 +11,48 @@
 }
 
 .poll-header {
-  display: flex;
-  justify-content: space-between;
-  word-break: break-word;
-  align-items: center;
-  padding: 0 15px;
+  & > .flex {
+    display: flex;
+    justify-content: space-between;
+    word-break: break-word;
+    align-items: center;
+  }
 
   .share-icon {
     margin-left: 15px;
+  }
+
+  .flex.space-between {
+    justify-content: space-between;
+    & > * {
+      width: 43%;
+      margin: 10px 0 25px;
+      height: 35px !important;
+    }
+  }
+
+  .loading-main-text.center {
+    margin: 20px auto;
+    width: 260px;
+    height: 20px;
+  }
+
+  .center {
+    justify-content: center;
+
+    & > .loading-main-text {
+      margin-top: 25px;
+      width: 100%;
+      margin-bottom: 10px;
+    }
+
+    .flex > .loading-main-text {
+      height: 25px;
+    }
+  }
+
+  .divider-margin {
+    margin-bottom: 20px;
   }
 }
 
@@ -102,23 +136,6 @@
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 50%;
   }
-
-  &.loader-bg {
-    height: 157px;
-    margin: 13px 20px 20px;
-    width: 95%;
-    background-image: linear-gradient(
-      -225deg,
-      #69eacb29 0%,
-      #eaccf83d 48%,
-      #6654f114 100%
-    );
-
-    .loader {
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
 }
 
 .loader-space {
@@ -134,7 +151,82 @@
   margin-right: 26px;
 }
 
+.top-items-center {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  margin-bottom: 36px;
+
+  mat-form-field {
+    margin-bottom: -12px;
+  }
+}
+
 .add-new-item-btn {
+  $bg: linear-gradient(52deg, #ac32e4a8 0%, #7918f2d4 51%, #7092e6e6 100%);
+  background-image: $bg;
+
+  padding: 5px 10px;
+  height: 22px;
+  display: flex;
+  align-items: center;
+  font-size: 0.9em;
+  white-space: nowrap;
+
+  & {
+    border: none;
+    outline: none;
+    position: relative;
+    z-index: 1;
+    border-radius: 5px;
+    background: $bg;
+    cursor: pointer;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 2px;
+    right: 2px;
+    top: 2px;
+    bottom: 2px;
+    border-radius: 4px;
+    background-color: white;
+    z-index: -1;
+    transition: 200ms;
+  }
+
+  &::after {
+    content: attr(data);
+    font-size: 16px;
+    background: $bg;
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: 200ms;
+  }
+
+  &:hover::before {
+    opacity: 50%;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+  }
+
+  &:hover::after {
+    color: #fff;
+  }
+
+  .icon {
+    margin-right: 7px;
+    background-image: $bg;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+.add-new-item-icon-btn {
   margin: 20px;
   font-size: 40px;
   height: 40px;
@@ -261,9 +353,13 @@
   transform: scale(0.75);
   margin-right: -25px;
 
-  ::ng-deep {
+  &::ng-deep {
+    .mat-mdc-form-field-focus-overlay {
+      opacity: 0 !important;
+    }
+
     .mat-mdc-text-field-wrapper {
-      background-color: #f5f0ff;
+      background-color: unset; //#f5f0ff;
       height: 43px;
       border-radius: 6px;
     }
