--- a/src/app/voter/voter.component.html
+++ b/src/app/voter/voter.component.html
@@ -1,5 +1,5 @@
 <div class="voter-container" [class.voted]="hasVoted">
-  <div class="votes" [matTooltip]="getVotersText(pollItem)">
+  <div class="votes" [matTooltip]="pollItem | voters : 'Voters'">
     <span>{{ pollItem.voters.length }}</span>
   </div>
   <div class="button-container cursor-pointer">
