Fix minor style issues.

--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.html
@@ -37,7 +37,8 @@
               >({{ movie.original_title }})</span
             ></ng-container
           ></span
-        >({{ movie.release_date | date : "yyyy" }})
+        >
+        ({{ movie.release_date | date : "yyyy" }})
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
