--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
@@ -2,6 +2,9 @@ $poster-base-unit: min(95vw, 472px);
 
 .add-movie-title {
   margin-left: -18px;
+  font-family: "Product Sans";
+  font-size: 1.7em;
+  line-height: 1.7em;
 }
 
 .movie {
