Fix issues with movie credit pipe.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -144,7 +144,7 @@
             <ng-container *ngIf="movie.credits">
               <div class="crew">
                 <div class="crew-member">
-                  <div class="name">{{ movies | credit: 'directors' }}</div>
+                  <div class="name">{{ movie | credit: 'directors' }}</div>
                   <div class="job">Director</div>
                 </div>
                 <div
