Fixes issue with user service login when adding new poll items. Remove reavel animation from movie-poll-item. Reduce movie poll load stages. Make poll-option dialog into more style consise.

--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -29,7 +29,7 @@
 >
   <ng-container *ngIf="status.movie && status.pollItem; else pollLoaderItem">
     <!-- <div class="bg" [style.width.%]="progressBarWidth"></div> -->
-    <mat-card class="option-card reveal">
+    <mat-card class="option-card">
       <div class="flex-column flex-grow">
         <div class="flex flex-grow">
           <div
