--- a/src/app/poll-option-dialog/poll-option-dialog.component.html
+++ b/src/app/poll-option-dialog/poll-option-dialog.component.html
@@ -31,7 +31,8 @@
 
 <div mat-dialog-actions>
   <button
-    mat-raised-button
+    class="close-btn"
+    mat-button
     color="primary"
     [mat-dialog-close]="true"
     aria-label="Ok"
